--- a/locales/fr_FR.po
+++ b/locales/fr_FR.po
@@ -1,31 +1,69 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Eric Feron
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# Eric Feron <eric.feron@archi-it.be>, 2023
+# 
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Archimap 2.0.2\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-11 15:43+0200\n"
-"PO-Revision-Date: 2021-04-11 15:48+0200\n"
-"Last-Translator: Eric Feron <ericferon@scarlet.be>\n"
-"Language-Team: \n"
-"Language: fr_FR\n"
+"POT-Creation-Date: 2023-09-28 22:55+0200\n"
+"PO-Revision-Date: 2023-08-24 15:42+0000\n"
+"Last-Translator: Eric Feron <eric.feron@archi-it.be>, 2023\n"
+"Language-Team: French (France) (https://app.transifex.com/ericferon/teams/174797/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 2.3\n"
+"Language: fr_FR\n"
+"Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
+
+#. TRANS : %1$s is the itemtype name,
+#. %2$s is the name of the item (used for headings of a list)
+#: inc/graph_item.class.php:507
+#, php-format
+msgid "%1$s = %2$s"
+msgstr ""
+
+#: inc/graph_item.class.php:235
+msgid "Add an item"
+msgstr "Ajouter un élément"
+
+#: inc/profile.class.php:124 inc/profile.class.php:156
+msgid "Associable items to a ticket"
+msgstr "Eléments associables à un ticket"
 
 #: inc/graph_item.class.php:466
 msgctxt "button"
 msgid "Associate a graph"
 msgstr "Associer un graphe"
 
-#: hook.php:463
+#: hook.php:463 hook.php:475
 msgid "Associate to the diagram"
 msgstr "Associer au diagramme"
+
+#: inc/graph.class.php:519
+msgid "Comments"
+msgstr "Commentaires"
+
+#: inc/profile.class.php:150
+msgid "Configuration"
+msgstr "Configuration"
+
+#: inc/profile.class.php:148
+msgid "Create"
+msgstr "Créer"
+
+#: inc/profile.class.php:148
+msgid "Delete permanently"
+msgstr "Supprimer définitivement"
+
+#: inc/graph.class.php:103 inc/graph.class.php:196
+msgid "Description"
+msgstr "Description"
 
 #: setup.php:77 inc/graph.class.php:47 inc/menu.class.php:31
 #: inc/profile.class.php:141
@@ -33,18 +71,42 @@ msgid "Diagram"
 msgid_plural "Diagrams"
 msgstr[0] "Diagramme"
 msgstr[1] "Diagrammes"
+msgstr[2] "Diagrammes"
+
+#: inc/config.class.php:39
+msgid "Diagrams configuration"
+msgstr "Configuration des diagrammes"
 
 #: inc/diagram.class.php:41
 msgid "Drawing Pane"
 msgid_plural "Drawing Pane"
 msgstr[0] "Table à dessin"
 msgstr[1] "Table à dessins"
+msgstr[2] "Table à dessin"
 
-#: inc/graph.class.php:122 inc/graph.class.php:228 inc/graph_item.class.php:495
+#: inc/graph.class.php:162 inc/graph.class.php:167 inc/graph.class.php:270
+#: inc/graph.class.php:278 inc/graph.class.php:516
+#: inc/graph_item.class.php:274 inc/graph_item.class.php:493
+msgid "Entity"
+msgstr "Entité"
+
+#: inc/profile.class.php:117
+msgid "General"
+msgstr "Général"
+
+#. technical maintainer
+#: inc/graph.class.php:122 inc/graph.class.php:228
+#: inc/graph_item.class.php:495 inc/graph.class.php:127
+#: inc/graph.class.php:221 inc/graph.class.php:349
+#: inc/graph_item.class.php:498
 msgid "Graph Maintainer"
 msgstr "Dessinateur"
 
-#: inc/graph.class.php:129 inc/graph.class.php:224 inc/graph_item.class.php:494
+#. data owner
+#: inc/graph.class.php:129 inc/graph.class.php:224
+#: inc/graph_item.class.php:494 inc/graph.class.php:134
+#: inc/graph.class.php:231 inc/graph.class.php:341
+#: inc/graph_item.class.php:497
 msgid "Graph Owner"
 msgstr "Responsable"
 
@@ -53,14 +115,79 @@ msgid "Graph associated"
 msgid_plural "Graphs associated"
 msgstr[0] "Graphe associé"
 msgstr[1] "Graphes associés"
+msgstr[2] "Graphes associés"
 
-#: inc/diagram.class.php:107
+#: inc/profile.class.php:120
+msgid "Helpdesk"
+msgstr "Service de support"
+
+#: inc/config.class.php:83 inc/graph.class.php:157 inc/graph.class.php:167
+#: inc/graph.class.php:262 inc/graph.class.php:278
+msgid "ID"
+msgstr ""
+
+#: inc/graph_item.class.php:276
+msgid "Inventory number"
+msgstr "Numéro d'inventaire"
+
+#. key
+#: inc/config.class.php:66 inc/config.class.php:125
+msgid "Key"
+msgstr "Clé"
+
+#: inc/config.class.php:75 inc/graph.class.php:152 inc/graph.class.php:241
+msgid "Last update"
+msgstr "Dernière modification"
+
+#: inc/diagram.class.php:107 inc/diagram.class.php:127
 msgid "Load diagram"
 msgstr "Charger le diagramme"
 
-#: inc/graph.class.php:215
+#. name of diagrams
+#: hook.php:339 inc/graph.class.php:97 inc/graph.class.php:187
+#: inc/graph.class.php:320 inc/graph.class.php:514
+#: inc/graph_item.class.php:272 inc/graph_item.class.php:491
+msgid "Name"
+msgstr "Nom"
+
+#: inc/profile.class.php:148
+msgid "Put in trashbin"
+msgstr "Mettre à la poubelle"
+
+#: inc/profile.class.php:148
+msgid "Read"
+msgstr "Lire"
+
+#: inc/graph_item.class.php:275
+msgid "Serial number"
+msgstr "Numéro de série"
+
+#. short description of diagrams
+#: inc/graph.class.php:215 inc/graph.class.php:333
 msgid "Short description"
 msgstr "Description courte"
 
-#~ msgid "This plugin requires GLPI >= 9.2 and < 9.4"
-#~ msgstr "Ce plugin nécessite une version GLPI >= 9.2 et < 9.4"
+#. data owner
+#: inc/graph.class.php:356
+msgid "Status"
+msgstr "Statut"
+
+#: inc/graph.class.php:564
+msgid "Transfer"
+msgstr "Transférer"
+
+#. type
+#. echo "<th>".PluginArchimapGraphCategory::getTypeName(1)."</th>";
+#: inc/config.class.php:57 inc/config.class.php:119 inc/graph.class.php:325
+#: inc/graph.class.php:518 inc/graph_item.class.php:271
+msgid "Type"
+msgstr "Type"
+
+#: inc/profile.class.php:148
+msgid "Update"
+msgstr "Modifier"
+
+#. short description of diagrams
+#: inc/config.class.php:133
+msgid "Value"
+msgstr "Valeur"
